<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalActivity">

    <TableLayout
        android:layout_width="261dp"
        android:layout_height="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menup"
                android:gravity="center"
                android:textSize="28dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMenuAutores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autor" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMenuDocentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/docente" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMenuAlumnos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alumno" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMenuUsuarios"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario" />
        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>