<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextNombreRazon"
        android:layout_width="319dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textInfo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/todos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/info"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/textInfo4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSustitucion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/traslados"
        app:layout_constraintStart_toEndOf="@+id/textHome2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="Home"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="335dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangulo_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnAgregar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="5dp"
            android:onClick="insertarSolicitud"
            android:layout_weight="1"
            android:background="@drawable/btn_enviar" />

        <ImageButton
            android:id="@+id/btnRegresar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="49dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/btnAgregar"
            android:layout_toRightOf="@+id/btnAgregar"
            android:layout_weight="1"
            android:background="@drawable/btn_regresar" />

        <TextView
            android:id="@+id/textRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegresar"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/textAgregar"
            android:layout_toRightOf="@+id/textAgregar"
            android:text="@string/atras" />

        <TextView
            android:id="@+id/textAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAgregar"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="0dp"
            android:text="@string/guardar" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textagregarCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


    <TextView
        android:id="@+id/txtDescripcionrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/motivo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textagregarCategoria" />

    <TextView
        android:id="@+id/txtEquipoInf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:text="@string/equipo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionrt"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/txtFechaTraslado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/fecha"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextFecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEquipoInf"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="343dp"
        android:layout_height="88dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/motivo"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionrt" />

    <Spinner
        android:id="@+id/spinnerEquipoPrestamoN"
        android:layout_width="195dp"
        android:layout_height="44dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"

        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="161dp"
        android:layout_height="42dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/estado"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextEstado"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEstado"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>