<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="Home"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/imageButtonMenuInicio"
        android:layout_width="74dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.866"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/equipo"
        app:layout_constraintStart_toEndOf="@+id/textHome"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="335dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rectangulo_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnAgregarEquipo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_agregar" />

        <ImageButton
            android:id="@+id/btnEditarEquipo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/btnAgregarEquipo"
            android:layout_toRightOf="@+id/btnAgregarEquipo"
            android:layout_weight="1"
            android:background="@drawable/btn_editar" />

        <ImageButton
            android:id="@+id/btnActualizarEquipo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="69dp"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/btnEditarEquipo"
            android:layout_toRightOf="@+id/btnEditarEquipo"
            android:layout_weight="1"
            android:background="@drawable/btn_regresar" />

        <TextView
            android:id="@+id/textAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAgregarEquipo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="0dp"
            android:text="@string/agregar" />

        <TextView
            android:id="@+id/txtEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnEditarEquipo"
            android:layout_marginStart="74dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="-3dp"
            android:layout_toEndOf="@+id/textAgregar"
            android:layout_toRightOf="@+id/textAgregar"
            android:text="@string/editar" />

        <TextView
            android:id="@+id/textBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnActualizarEquipo"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/txtEditar"
            android:layout_toRightOf="@+id/txtEditar"
            android:text="@string/actualizar" />

    </RelativeLayout>



    <EditText
        android:id="@+id/editBuscarEquipoMenu"
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/buscarNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="310dp"
        android:layout_height="284dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBuscarEquipoMenu">

        <ListView
            android:id="@+id/listado_equipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="70dp"
            android:gravity="center"
            android:numColumns="auto_fit" />


    </LinearLayout>

    <TextView
        android:id="@+id/textInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/seleccione"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfo1" />



</androidx.constraintlayout.widget.ConstraintLayout>